--- a/light/index.html
+++ b/light/index.html
@@ -86,6 +86,7 @@
             <li>妹に婚約者を譲れと言われました 最強の竜に気に入られてまさかの王国乗っ取り?</li>
             <li>地味で目立たない私は、今日で終わりにします。</li>
             <li>転生令嬢は冒険者を志す</li>
+            <li>悪役令嬢レベル99 ~私は裏ボスですが魔王ではありません~</li>
             <li>悪役令嬢になんかなりません。私は『普通』の公爵令嬢です!</li>
             <li>加護なし令嬢の小さな村 ~さあ、領地運営を始めましょう!~</li>
             <li>サイレント・ウィッチ 鎮目の魔女の隠しごと</li>
@@ -167,18 +168,287 @@
             <li>成り行きで婚約を申し込んだ弱気貧乏令嬢ですが、何故か次期公爵様に溺愛されて囚われています/li>
             <li>元悪役令嬢とS級冒険者のほのぼの街暮らし~不遇なキャラに転生したけど、理想の美女になれたからプラマイゼロだよね~</li>
             <li>恋した人は、妹の代わりに死んでくれと言った。 -妹と結婚した片思い相手がなぜ今更私のもとに?と思ったら-</li>
+            <li>婚約破棄された替え玉令嬢、初恋の年上王子に溺愛される</li>
+            <li>断罪された悪役令嬢は、逆行して完璧な悪女を目指す</li>
+            <li>たくまし令嬢はへこたれない! ~妹に聖女の座を奪われたけど、騎士団でメイドとして働いています~</li>
+            <li>バッドエンド目前のヒロインに転生した私、今世では恋愛するつもりがチートな兄が話してくれません!?</li>
+            <li>世界最高の制霊術師~姉たちに虐げられ追放されてしまった私が、実は天才精霊術師だと気づいてももう遅い。私はもふもふと幸せに生きていきます~</li>
+            <li>悪役の王女に転生したけど、隠しキャラが隠れてない。</li>
+            <li>ポンコツ王太子のモブ姉王女らしいけど、悪役令嬢が可哀想なので助けようと思います~王女ルートがない！？なら作ればいいのよ！~</li>
+            <li>目が覚めたら投獄された悪女だった</li>
+        </ul>
+        <p>オーバーラップノベルズf</p>
+        <ul>
+            <li>二度と家には帰りません！</li>
+            <li>断罪された悪役令嬢は続編の悪役令嬢に生まれ変わる ~無自覚な愛され系は今度こそ破滅を回避します~</li>
+            <li>悪役令嬢(予定)らしいけど、私はお菓子が食べたい ~ブロックスキルで穏やかな人生目指します~</li>
+            <li>ループ7回目の悪役令嬢は、元敵国で自由気ままな花嫁生活を満喫する</li>
+            <li>後宮の雑用姫 山育ちの知恵を駆使して宮廷をリフォームしたり、邪悪なものを狩ったりしていたら、何故か皇帝たちから一目置かれるようになりました~</li>
+            <li>悲劇のヒロインぶる妹のせいで婚約破棄したのですが、なぜか正義感の強い王太子に絡まれるようになりました</li>
+            <li>転生先が気弱すぎる伯爵夫人だった ~前世最強魔女は快適生活を送りたい~</li>
+            <li>姉の引き立て役に徹してきましたが、今日でやめます</li>
+            <li>虐げられた追放王女は、転生した伝説の魔女でした ~迎えに来られても困ります。従僕とのお昼寝を邪魔しないでください~</li>
+            <li>元宮廷錬金術師の私、辺境でのんびり領地開拓始めます! ~婚約破棄に追放までセットでしてくれるんですか？~</li>
+            <li>勘違い結婚 偽りの花嫁のはずが、なぜか竜王陛下に溺愛されてます！？</li>
+            <li>侯爵家の次女は姿を隠す ~家族に忘れられた元令嬢は、薬師となってスローライフを謳歌する~</li>
+            <li>魔道具師リゼ、開業します ~姉の代わりに魔道具を作っていたわたし、倒れたところを氷の公爵様に保護されました~</li>
+        </ul>
+        <p>アリアンローズノベルズ</p>
+        <ul>
+            <li>魔導士は平凡を望む</li>
+            <li>聖女になるので二度目の人生は勝手にさせてもらいます ~王太子は、前世で私を振った恋人でした~</li>
+            <li>魔法世界の受付嬢になりたいです</li>
+            <li>どうも、悪役にされた令嬢ですけれど</li>
+            <li>脇役令嬢に転生しましたがシナリオ通りにはいかせません!</li>
+            <li>婚約破棄をした令嬢は我慢を止めました</li>
+        </ul>
+        <p>ファンタジア文庫</p>
+        <ul>
+            <li>神さまのいない日曜日</li>
+            <li>黙示録アリス</li>
+            <li>メイデーア魔王転生記 -俺たちの魔王はこれからだ。-</li>
+            <li>アサシンズプライド</li>
+            <li>キミと僕の最後の戦場、あるいは世界が始まる聖戦</li>
+        </ul>
+        <p>GCノベルズ</p>
+        <ul>
+            <li>転生したらスライムだった件</li>
+            <li>お色気担当の姉と、庇護欲担当のお妹に挟まれた私</li>
+            <li>100日後に死ぬ悪役令嬢は毎日がとても楽しい。</li>
+        </ul>
+        <p>アイリスNEO</p>
+        <ul>
+            <li>悲劇の元凶となる最強外道ラスボス女王は民のために尽くします</li>
+            <li>妹に婚約者を取られたら、獣な王子に求婚されました ~またたびとして溺愛されてます~</li>
+            <li>捨てられ男爵令嬢は黒騎士様のお気に入り</li>
+            <li>その悪役令嬢は攻略本を携えている</li>
+            <li>貧乏男爵令嬢の領地改革 ~皇太子妃争いはごめんこうむります~</li>
+            <li>転生したら悪役令嬢だったのでヒキニートになります~チートなお父様の溺愛が凄すぎる~</li>
+            <li>高飛車皇女は黙ってない</li>
+            <li>ノベルアンソロジー 婚約破棄編 ハッピーエンドは婚約破棄のおかげです</li>
+        </ul>
+        <p>富士見L文庫</p>
+        <ul>
+            <li>榮国物語 春華とりかえ抄</li>
+            <li>わたしの幸せな結婚</li>
+            <li>メイデーア転生物語</li>
+            <li>転生魔女は滅びを告げる</li>
+            <li>白豚妃再来伝 後宮も二度目なら</li>
+            <li>赤毛のトアと罪の騎士団</li>
+        </ul>
+        <p>KADOKAWA</p>
+        <ul>
+            <li>婚約者は、私の妹に恋をする</li>
+            <li>双子の姉が神子として引き取られて、私は捨てられたけど多分私が神子である。</li>
+            <li>今度は絶対に邪魔しませんっ!</li>
+            <li>針子の乙女</li>
+            <li>闇堕ち聖女は戦渦で舞う</li>
+        </ul>
+        <p>Mノベルス</p>
+        <ul>
+            <li>嫌われ令嬢はその運命を受け入れる</li>
+            <li>騙され裏切られ処刑された私が……誰を信じられるというのでしょう</li>
+            <li>前世聖女は手を抜きたい よきよき</li>
+            <li>家族に役立たずと言われ続けたわたしが、魔性の公爵騎士様の最愛になるまで</li>
+            <li>シンデレラの姉ですが、不本意ながら王子と結婚することになりました ~身代わり王太子妃は離宮でスローライフを満喫する~</li>
+            <li>婚約破棄され家を追われた少女の手を取り、天才魔術師は優雅に跪く</li>
+            <li>断罪されている悪役令嬢と入れ替わって婚約者たちをぶっ飛ばしたら、溺愛が待っていました</li>
+            <li>無自覚な天才魔道具師はのんびり暮らしたい</li>
+        </ul>
+        <p>SQEXノベル</p>
+        <ul>
             <li></li>
             <li></li>
+        </ul>
+        <p>アース・スターノベル</p>
+        <ul>
             <li></li>
             <li></li>
+        </ul>
+        <p>PUSH!ブックス</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>Kラノベブックスf</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>ヒーロー文庫</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>スターツ出版文庫</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>一迅社ノベルズ</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>アスキー・メディアワークス</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>ツギクルブックス</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>ベリーズ文庫</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>マッグガーデン・ノベルズ</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>レガロシリーズ</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>BF文庫</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>ベリーズファンタジーノベルズ</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>GAノベル</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>HJノベルズ</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>双葉文庫</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>集英社オレンジ文庫</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>NiyNOVELS</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>サーガフォレスト</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>メリッサ文庫</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>角川文庫</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>講談社ラノベ文庫</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>電撃の新文芸</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>DRE NOVELS</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>Jノベルライト文庫</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>PRIMONOVELS</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>UGfnovels</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>ダッシュエックスノベルズ</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>フェアリーキスピュア</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>メディアワークス文庫</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>リプレ</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>宝島社</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>幻冬舎</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>早川書房</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>星海社FICTIONS</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>角川書店</p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+        <p>講談社キャラクターズA</p>
+        <ul>
             <li></li>
             <li></li>
         </ul>
         <ul>
             <li>華鬼</li>
-            <li>メイデーア魔王転生紀</li>
             <li>悪役令嬢らしく、攻略対象を服従させます 推しがダメになっていて解釈違いなんですけど!?</li>
-
+            <li>学戦都市アスタリスク</li>
         </ul>
     </main>
     <footer></footer>
