--- a/light/index.html
+++ b/light/index.html
@@ -247,63 +247,91 @@
         <p>Mノベルス</p>
         <ul>
             <li>嫌われ令嬢はその運命を受け入れる</li>
+            <li>冤罪で処刑された侯爵令嬢は今世ではもふ神さまと穏やかに過ごしたい</li>
             <li>騙され裏切られ処刑された私が……誰を信じられるというのでしょう</li>
             <li>前世聖女は手を抜きたい よきよき</li>
+            <li>妃殿下の微笑 ~身代わり花嫁は、引きこもり殿下と幸せに暮らしたい~</li>
+            <li>地味姫と黒猫の、円満な婚約破棄</li>
+            <li>死にたくないので、全力で媚びたら溺愛されました!</li>
+            <li>行き遅れ聖女の幸せ~婚約破棄されたと思ったら魔族の皇子様に溺愛されてます!~</li>
             <li>家族に役立たずと言われ続けたわたしが、魔性の公爵騎士様の最愛になるまで</li>
             <li>シンデレラの姉ですが、不本意ながら王子と結婚することになりました ~身代わり王太子妃は離宮でスローライフを満喫する~</li>
             <li>婚約破棄され家を追われた少女の手を取り、天才魔術師は優雅に跪く</li>
             <li>断罪されている悪役令嬢と入れ替わって婚約者たちをぶっ飛ばしたら、溺愛が待っていました</li>
+            <li>悪役令嬢は、婚約破棄してきた王子の娘に転生する~氷の貴公子と契約婚約して「ざまぁ」する筈なのに、なぜか溺愛されています!?~</li>
             <li>無自覚な天才魔道具師はのんびり暮らしたい</li>
         </ul>
         <p>SQEXノベル</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>悪役令嬢は溺愛ルートに入りました！？</li>
+            <li>家から逃げ家から逃げ出したい私が、うっかり憧れの大魔法使い様を買ってしまったら
+            <li>ブラック魔道具師ギルドを追放された私、王宮魔術師として拾われる ~ホワイトな宮廷で、幸せな新生活を始めます!~</li>
+            <li>逃がした魚は大きかったが釣り上げた魚が大きすぎた件</li>
+            <li>忘却聖女</li>
+            <li>婚約破棄されたのに元婚約者の結婚式に招待されました。断れないので兄の友人に同行してもらいます。</li>
         </ul>
         <p>アース・スターノベル</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>転生した大聖女は、聖女であることをひた隠す</li>
+            <li>転生令嬢が国王陛下に溺愛されるたった一つのワケ</li>
+            <li>異世界転移して教師になったが、魔女と恐れられている件 ~王族も貴族も関係ないから真面目に授業を聞け~</li>
+            <li>無自覚な天才少女は気付かない ~あらゆる分野で努力しても家族が全く褒めてくれないので、家出して冒険者になりました~</li>
+            <li>辺境の貧乏伯爵に嫁ぐことになったので領地改革に励みます</li>
         </ul>
         <p>PUSH!ブックス</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>私は敵になりません!</li>
+            <li>王太子に婚約破棄されたので、もうバカのふりはやめようと思います</li>
         </ul>
         <p>Kラノベブックスf</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>死んでも推します!!~人生二度目の公爵令嬢、今度は男装騎士になって最推し婚約者をお救いします~</li>
+            <li>強制的に悪役令嬢にされていたのでまずはおかゆを食べようと思います。</li>
+            <li>王妃様は離婚したい ~異世界から聖女様が来たので、もうお役御免ですわね?~</li>
+            <li>10年間年間身体を乗っ取られ悪女になっていた私に、二度と顔を見せるなと婚約破棄してきた騎士様が今日も縋ってくるli>
+            <li>断頭台に消えた伝説の悪女、二度目の人生ではガリ勉地味眼鏡になって平穏を望む</li>
+            <li>隠れ星は心を繋いで ~婚約を解消した後の、美味しいご飯と恋のお話~</li>
+            <li>推定年齢120歳、顔も知らない婚約者が実は超絶美形でした。</li>
         </ul>
         <p>ヒーロー文庫</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>薬屋のひとりごと</li>
         </ul>
         <p>スターツ出版文庫</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>鬼の花嫁</li>
         </ul>
         <p>一迅社ノベルズ</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>勇者の嫁になりたくて(￣∇￣)ゞ</li>
+            <li>第七王子に生まれたけど、何すりゃいいの!?</li>
+            <li>ふつつかな悪女ではございますが ~離宮蝶鼠とりかえ伝~</li>
+            <li>悪役令嬢らしいですが、私は猫をモフります</li>
+            <li>無口な公爵令嬢と冷徹な皇帝~前世拾った子供が皇帝になっていました~</li>
+            <li>気弱な令嬢と追放殿下のイチャイチャ領地経営! ~一途で可愛い婚約者を、わたしが一流の領主にして見せます!~</li>
+            <li>転生したら悪役令嬢になりました。婚約破棄のイベント、早く来い</li>
         </ul>
         <p>アスキー・メディアワークス</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>鷲尾須美は勇者である</li>
+            <li>乃木若葉は勇者である</li>
+            <li>茅芽吹は勇者である</li>
+            <li>結城友奈は勇者である 勇者史外典</li>
         </ul>
         <p>ツギクルブックス</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>逆行した悪役令嬢は、なぜか魔力を失ったので深窓の令嬢になります</li>
+            <li>婚約解消を提案したら王太子様に溺愛されました ~お手をどうぞ、僕の君~</li>
+            <li>絶望令嬢の華麗なる離婚 ~幼馴染の大公閣下の溺愛が止まらないのです~</li>
+            <li>物語完結後から始まる悪役令嬢の大逆転劇</li>
         </ul>
         <p>ベリーズ文庫</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>"自称"人並会社員でしたが、転生したら侍女になりました</li>
+            <li>悪役令嬢って何をすればいいんだっけ~破滅フラグは全力で回避します~</li>
+            <li>悪役令嬢ですが、チートが目覚めて溺愛されています</li>
+            <li>ループ10回目の公爵令嬢は王太子に溺愛されています</li>
+            <li>悪女のレッテルを張られた追放令嬢ですが、最強陛下の溺愛につかまりました</li>
         </ul>
         <p>マッグガーデン・ノベルズ</p>
         <ul>
@@ -320,10 +348,12 @@
             <li></li>
             <li></li>
         </ul>
-        <p>ベリーズファンタジーノベルズ</p>
+        <p>ベリーズファンタジー</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>規格外スキルの持ち主ですが、聖女になんてなりませんっ! ~チート聖女はちびっこと平穏に暮らしたいので実力をひた隠す~</li>
+            <li>ループ11回目の聖女ですが、隣国でポーション作って幸せになります! ~10回殺され追放されたので、今世は自由気ままな人生を満喫してもいいですよね?~</li>
+            <li>妹の身代わりで嫁いだはずが、どうやら私が心の聖女だったようです~自由気ままなスローライフを満喫しているのでほっといてください!~</li>
+            <li>我慢ばかりの「お姉様」をやめさせていただきます！~婚約破棄されましたが国を守っていたのは私です。おかげで追放先で村づくりを謳歌しているのでお構いなく~</li>
         </ul>
         <p>GAノベル</p>
         <ul>
