--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
     </header>
     <nav>
     <ul>
-        <li><a href="./about-me/index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li>About</li>
         <li><a href="./main/index.html">Main</a></li>
         <li><a href="./light/index.html">Light</a></li>
