--- a/manga/index.html
+++ b/manga/index.html
@@ -11,7 +11,7 @@
     <header>About me</header>
     <nav id="menubar">
         <ul>
-            <li><a href="./about-me/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="./about/index.html">About</a></li>
             <li><a href="./main/index.html">Main</a></li>
             <li><a href="./light/index.html">Light</a></li>
