--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </aside>
     </header>
     <nav id="menubar">
-        <ul>
+        <ul class="nav-list">
             <li>HOME</li>
             <li><a href="./about/index.html">About</a></li>
             <li><a href="./main/index.html">Main</a></li>
