--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href="./contact/index.html">Contact</a></li>
         </ul>
     </nav>
-    <main>
+    <main class="main">
         <h1>HOME</h1>
         <p>それぞれのページの説明</p>
         <h2>About</h2>
