--- a/contact/index.html
+++ b/contact/index.html
@@ -23,6 +23,34 @@
     </nav>
     <main>
         <h1>CONTACT</h1>
+        <form action="">
+        <div class="form-group">
+            <label for="yourName" class="form-label">お名前</label>
+            <div>
+            <input type="text" name="お名前" id="yourName">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="yourEmail" class="form-label">E-Mail</label>
+            <div>
+            <input type="email" name="E-Mail" id="yourEmail">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="yourInquiry" class="form-label">お問い合わせ内容</label>
+            <div>
+            <textarea name="お問い合わせ内容" id="yourInquiry" cols="30" rows="10">
+            </textarea>
+            </div>
+        <div class="form-group">
+            <button type="submit">
+                <img src="../photo/button.jpg" alt="送信する">
+            </button>
+            <div>
+            <input type="email" name="メール" id="yourEmail">
+            </div>
+        </div>
+        </form>
     </main>
     <footer></footer>
 </body>
