--- a/about/index.html
+++ b/about/index.html
@@ -110,6 +110,8 @@
             </section>
         </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
+    </footer>
 </body>
 </html>
