--- a/game/index.html
+++ b/game/index.html
@@ -46,6 +46,8 @@
             <li>ダンジョンに出会いを求めるのは間違っているだろうか~メモリア・フレーゼ~</li>
         </ul>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
+    </footer>
 </body>
 </html>
