--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         <p>私が気に入っているゲームの紹介</p>
         <h2>Contact</h2>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
+    </footer>
 </body>
 </html>
