--- a/manga/index.html
+++ b/manga/index.html
@@ -27,6 +27,8 @@
             <li>死神と銀の騎士</li>
         </ul>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
+    </footer>
 </body>
 </html>
