--- a/contact/index.html
+++ b/contact/index.html
@@ -52,6 +52,8 @@
         </div>
         </form>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
+    </footer>
 </body>
 </html>
