--- a/light/index.html
+++ b/light/index.html
@@ -481,6 +481,8 @@
             <li>学戦都市アスタリスク</li>
         </ul>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
+    </footer>
 </body>
 </html>
