--- a/main/index.html
+++ b/main/index.html
@@ -179,6 +179,8 @@
             </ul>
         </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
+    </footer>
 </body>
 </html>
