--- a/main/index.html
+++ b/main/index.html
@@ -12,13 +12,13 @@
     <nav id="menubar">
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="./about/index.html">About</a></li>
+            <li><a href="../about/index.html">About</a></li>
             <li>Main</li>
-            <li><a href="./light/index.html">Light</a></li>
-            <li><a href="./anime/index.html">Anime</a></li>
-            <li><a href="./manga/index.html">Manga</a></li>
-            <li><a href="./game/index.html">game</a></li>
-            <li><a href="./contact/index.html">Contact</a></li>
+            <li><a href="../light/index.html">Light</a></li>
+            <li><a href="../anime/index.html">Anime</a></li>
+            <li><a href="../manga/index.html">Manga</a></li>
+            <li><a href="../game/index.html">game</a></li>
+            <li><a href="../contact/index.html">Contact</a></li>
         </ul>
     </nav>
     <main>
