--- a/about/index.html
+++ b/about/index.html
@@ -15,12 +15,12 @@
     <ul>
         <li><a href="../index.html">Home</a></li>
         <li>About</li>
-        <li><a href="./main/index.html">Main</a></li>
-        <li><a href="./light/index.html">Light</a></li>
-        <li><a href="./anime/index.html">Anime</a></li>
-        <li><a href="./manga/index.html">Manga</a></li>
-        <li><a href="./game/index.html">game</a></li>
-        <li><a href="./contact/index.html">Contact</a></li>
+        <li><a href="../main/index.html">Main</a></li>
+        <li><a href="../light/index.html">Light</a></li>
+        <li><a href="../anime/index.html">Anime</a></li>
+        <li><a href="../manga/index.html">Manga</a></li>
+        <li><a href="../game/index.html">game</a></li>
+        <li><a href="../contact/index.html">Contact</a></li>
     </ul>
     </nav>
     <main>
