--- a/anime/index.html
+++ b/anime/index.html
@@ -11,13 +11,14 @@
     <header>About me</header>
     <nav>
     <ul>
-        <li><a href="./about-me/index.html">Home</a></li>
-        <li><a href="./about/index.html">About</a></li>
-        <li><a href="./main/index.html">Main</a></li>
-        <li><a href="./light/index.html">Light</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../about/index.html">About</a></li>
+        <li><a href="../main/index.html">Main</a></li>
+        <li><a href="../light/index.html">Light</a></li>
         <li>Anime</li>
-        <li><a href="./manga/index.html">Manga</a></li>
-        <li><a href="./contact/index.html">Contact</a></li>
+        <li><a href="../manga/index.html">Manga</a></li>
+        <li><a href="../game/index.html">game</a></li>
+        <li><a href="../contact/index.html">Contact</a></li>
     </ul>
     </nav>
     <main>
