--- a/contact/index.html
+++ b/contact/index.html
@@ -11,13 +11,13 @@
     <header>About me</header>
     <nav id="menubar">
         <ul>
-            <li><a href="./about-me/index.html">Home</a></li>
-            <li><a href="./about/index.html">About</a></li>
-            <li><a href="./main/index.html">Main</a></li>
-            <li><a href="./light/index.html">Light</a></li>
-            <li><a href="./anime/index.html">Anime</a></li>
-            <li><a href="./manga/index.html">Manga</a></li>
-            <li><a href="./game/index.html">game</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about/index.html">About</a></li>
+            <li><a href="../main/index.html">Main</a></li>
+            <li><a href="../light/index.html">Light</a></li>
+            <li><a href="../anime/index.html">Anime</a></li>
+            <li><a href="../manga/index.html">Manga</a></li>
+            <li><a href="../game/index.html">game</a></li>
             <li>Contact</li>
         </ul>
     </nav>
