--- a/light/index.html
+++ b/light/index.html
@@ -11,14 +11,14 @@
     <header>About me</header>
     <nav id="menubar">
         <ul>
-            <li><a href="./about-me/index.html">Home</a></li>
-            <li><a href="./about/index.html">About</a></li>
-            <li><a href="./main/index.html">Main</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about/index.html">About</a></li>
+            <li><a href="../main/index.html">Main</a></li>
             <li>Light</li>
-            <li><a href="./anime/index.html">Anime</a></li>
-            <li><a href="./manga/index.html">Manga</a></li>
-            <li><a href="./game/index.html">game</a></li>
-            <li><a href="./contact/index.html">Contact</a></li>
+            <li><a href="../anime/index.html">Anime</a></li>
+            <li><a href="../manga/index.html">Manga</a></li>
+            <li><a href="../game/index.html">game</a></li>
+            <li><a href="../contact/index.html">Contact</a></li>
         </ul>
     </nav>
     <main>
