--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <img src="photo/sakura_gensou3.webp" alt class="slide3">
         </aside>
     </header>
+    <input type="checkbox" name="navToggle" id="navToggle" class="nav-toggle">
+    <lavel for="navToggle" class="btn-burger"></lavel>
     <nav id="menubar">
         <ul class="nav-list">
             <li>HOME</li>
