--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
 <body>
     <header class="header">
         About me
-        <aside id="mainimg">
-            <img src="photo/sakura_haikei.jpg" alt class="slide0">
-            <img src="photo/sakura_haikei.jpg" alt class="slide1">
-            <img src="photo/sakura_gensou.jpg" alt class="slide2">
-            <img src="photo/sakura_gensou3.webp" alt class="slide3">
-        </aside>
+        <figure id="mainimg">
+            <img src="photo/sakura_gensou3.webp" alt="" class="sakura">
+        </figure>
     </header>
     <input type="checkbox" name="navToggle" id="navToggle" class="nav-toggle">
     <lavel for="navToggle" class="btn-burger"></lavel>
@@ -46,6 +43,7 @@
         <h2>game</h2>
         <p>私が気に入っているゲームの紹介</p>
         <h2>Contact</h2>
+        <p>お問い合わせページ</p>
     </main>
     <footer class="footer">
         <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
