--- a/main/index.html
+++ b/main/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <header>About me</header>
+    <input type="checkbox" name="navToggle" id="navToggle" class="nav-toggle">
+    <lavel for="navToggle" class="btn-burger"></lavel>
     <nav id="menubar">
-        <ul>
+        <ul class="nav-list">
             <li><a href="../index.html">Home</a></li>
             <li><a href="../about/index.html">About</a></li>
             <li>Main</li>
