--- a/about/index.html
+++ b/about/index.html
@@ -11,17 +11,19 @@
     <header>
         <h1>自己紹介</h1>
     </header>
-    <nav>
-    <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li>About</li>
-        <li><a href="../main/index.html">Main</a></li>
-        <li><a href="../light/index.html">Light</a></li>
-        <li><a href="../anime/index.html">Anime</a></li>
-        <li><a href="../manga/index.html">Manga</a></li>
-        <li><a href="../game/index.html">game</a></li>
-        <li><a href="../contact/index.html">Contact</a></li>
-    </ul>
+    <input type="checkbox" name="navToggle" id="navToggle" class="nav-toggle">
+    <lavel for="navToggle" class="btn-burger"></lavel>
+    <nav id="menubar">
+        <ul class="nav-list">
+            <li><a href="../index.html">Home</a></li>
+            <li>About</li>
+            <li><a href="../main/index.html">Main</a></li>
+            <li><a href="../light/index.html">Light</a></li>
+            <li><a href="../anime/index.html">Anime</a></li>
+            <li><a href="../manga/index.html">Manga</a></li>
+            <li><a href="../game/index.html">game</a></li>
+            <li><a href="../contact/index.html">Contact</a></li>
+        </ul>
     </nav>
     <main>
         <section>
