--- a/anime/index.html
+++ b/anime/index.html
@@ -9,17 +9,19 @@
 </head>
 <body>
     <header>About me</header>
-    <nav>
-    <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../about/index.html">About</a></li>
-        <li><a href="../main/index.html">Main</a></li>
-        <li><a href="../light/index.html">Light</a></li>
-        <li>Anime</li>
-        <li><a href="../manga/index.html">Manga</a></li>
-        <li><a href="../game/index.html">game</a></li>
-        <li><a href="../contact/index.html">Contact</a></li>
-    </ul>
+    <input type="checkbox" name="navToggle" id="navToggle" class="nav-toggle">
+    <lavel for="navToggle" class="btn-burger"></lavel>
+    <nav id="menubar">
+        <ul class="nav-list">
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about/index.html">About</a></li>
+            <li><a href="../main/index.html">Main</a></li>
+            <li><a href="../light/index.html">Light</a></li>
+            <li>Anime</li>
+            <li><a href="../manga/index.html">Manga</a></li>
+            <li><a href="../game/index.html">game</a></li>
+            <li><a href="../contact/index.html">Contact</a></li>
+        </ul>
     </nav>
     <main>
         <h1>ANIME</h1>
