--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         About me
         <figure id="mainimg">
-            <img src="photo/sakura_gensou.jpg" alt="" class="sakura">
+            <img src="photo/hoshizora.jpg" alt="" class="hoshizora">
         </figure>
     </header>
     <input type="checkbox" name="navToggle" id="navToggle" class="nav-toggle">
