--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </ul>
     </nav>
     <main class="main">
-        <h1>HOME</h1>
+        <h1 class="main-home">HOME</h1>
         <p>それぞれのページの説明</p>
-        <h2>About</h2>
+        <h2 class="main-setsumei">About</h2>
         <p>自己紹介</p>
         <h2>Main</h2>
         <p>私が気に入っているものの中からライトノベル原作の漫画・アニメ（本を持っているもの）の紹介</p>
