--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
     </nav>
     <main class="main">
         <h1 class="main-home">HOME</h1>
-        <p>それぞれのページの説明</p>
+        <p class="home-p">それぞれのページの説明</p>
         <h2 class="main-setsumei">About</h2>
-        <p>自己紹介</p>
-        <h2>Main</h2>
-        <p>私が気に入っているものの中からライトノベル原作の漫画・アニメ（本を持っているもの）の紹介</p>
-        <h2>Light</h2>
-        <p>私が気に入っているライトノベル・小説の紹介</p>
-        <h2>Anime</h2>
-        <p>私が気に入っているアニメの紹介</p>
-        <h2>Manga</h2>
-        <p>私が気に入っている漫画の紹介</p>
-        <h2>game</h2>
-        <p>私が気に入っているゲームの紹介</p>
-        <h2>Contact</h2>
-        <p>お問い合わせページ</p>
+        <p class="setsumei-p">自己紹介</p>
+        <h2 class="main-setsumei">Main</h2>
+        <p class="setsumei-p">私が気に入っているものの中からライトノベル原作の漫画・アニメ（本を持っているもの）の紹介</p>
+        <h2 class="main-setsumei">Light</h2>
+        <p class="setsumei-p">私が気に入っているライトノベル・小説の紹介</p>
+        <h2 class="main-setsumei">Anime</h2>
+        <p class="setsumei-p">私が気に入っているアニメの紹介</p>
+        <h2 class="main-setsumei">Manga</h2>
+        <p class="setsumei-p">私が気に入っている漫画の紹介</p>
+        <h2 class="main-setsumei">game</h2>
+        <p class="setsumei-p">私が気に入っているゲームの紹介</p>
+        <h2 class="main-setsumei">Contact</h2>
+        <p class="setsumei-p">お問い合わせページ</p>
     </main>
     <footer class="footer">
         <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
