--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <img src="photo/sakura_gensou4.jpg" alt="" class="sakura">
         </figure>
     </header>
+    <input type="checkbox" name="navToggle" id="navToggle" class="nav-toggle">
+    <lavel for="navToggle" class="btn-burger"></lavel>
     <nav id="menubar">
         <ul class="nav-list">
             <li>HOME</li>
