--- a/game/index.html
+++ b/game/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <header>About me</header>
+    <input type="checkbox" name="navToggle" id="navToggle" class="nav-toggle">
+    <lavel for="navToggle" class="btn-burger"></lavel>
     <nav id="menubar">
         <ul class="nav-list">
             <li><a href="../index.html">Home</a></li>
