--- a/about/index.html
+++ b/about/index.html
@@ -26,24 +26,15 @@
         </ul>
     </nav>
     <main>
-        <section>
-            <h2>名前</h2>
+        <section class="section">
+            <h1>名前</h>
             <p>香川歩美</p>
-        </section>
-        <section>
             <h2>経歴</h2>
-            <section>
                 <h3>出身地</h3>
                 <p>富山県滑川市</p>
-            </section>
-            <section>
                 <h3>出身校</h3>
                 <p>富山県立富山北部高等学校</p>
-            </section>
-        </section>
-        <section>
             <h2>趣味</h2>
-            <section>
                 <h3>読書</h3>
                 <p>ライトノベル/小説</p>
                 <ul>
@@ -55,8 +46,6 @@
                     <li>転生悪女の黒歴史</li>
                     <li>桃組＋戦記</li>
                 </ul>
-            </section>
-            <section>
                 <h3>アニメ視聴</h3>
                 <p>国内アニメ</p>
                 <ul>
@@ -64,8 +53,6 @@
                     <li>ツルネ</li>
                     <li>キノの旅</li>
                 </ul>
-            </section>
-            <section>
                 <h3>音楽鑑賞</h3>
                 <p>筝曲</p>
                 <ul>
@@ -73,8 +60,6 @@
                     <li>久遠</li>
                     <li>天泣</li>
                 </ul>
-            </section>
-            <section>
                 <h3>Youtube視聴</h3>
                 <p>アニソン</p>
                 <ul>
@@ -99,8 +84,6 @@
                     <li>結城友奈は勇者である～花結いのきらめき～</li>
                     <li>Fate/Grand Order</li>
                 </ul>
-            </section>
-            <section>
                 <h3>ゲームプレイ</h3>
                 <p>スマホゲーム</p>
                 <ul>
@@ -109,7 +92,6 @@
                     <li>ダンジョンに出会いを求めるのは間違っているだろうか～メモリア・フレーゼ～</li>
                     <li>TWISTED-WONDERLAND</li>
                 </ul>
-            </section>
         </section>
     </main>
     <footer class="footer">
