--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>自己紹介</h1>
     </header>
     <input type="checkbox" name="navToggle" id="navToggle" class="nav-toggle">
@@ -26,73 +26,71 @@
         </ul>
     </nav>
     <main>
-        <section class="section">
-            <h1>名前</h>
-            <p>香川歩美</p>
-            <h2>経歴</h2>
-                <h3>出身地</h3>
-                <p>富山県滑川市</p>
-                <h3>出身校</h3>
-                <p>富山県立富山北部高等学校</p>
-            <h2>趣味</h2>
-                <h3>読書</h3>
-                <p>ライトノベル/小説</p>
-                <ul>
-                    <li>メイデーア転生物語</li>
-                    <li>華鬼</li>
-                </ul>
-                <p>漫画</p>
-                <ul>
-                    <li>転生悪女の黒歴史</li>
-                    <li>桃組＋戦記</li>
-                </ul>
-                <h3>アニメ視聴</h3>
-                <p>国内アニメ</p>
-                <ul>
-                    <li>ヴァイオレット・エヴァーガーデン</li>
-                    <li>ツルネ</li>
-                    <li>キノの旅</li>
-                </ul>
-                <h3>音楽鑑賞</h3>
-                <p>筝曲</p>
-                <ul>
-                    <li>龍星群</li>
-                    <li>久遠</li>
-                    <li>天泣</li>
-                </ul>
-                <h3>Youtube視聴</h3>
-                <p>アニソン</p>
-                <ul>
-                    <li>アイドリッシュセブンの曲</li>
-                    <li>アイドル</li>
-                </ul>
-                <p>ボカロ</p>
-                <ul>
-                    <li>誰かの心臓になれたなら</li>
-                    <li>贖罪</li>
-                    <li>シャルル</li>
-                    <li>命に嫌われている</li>
-                    <li>天ノ邪</li>
-                </ul>
-                <p>アニメ</p>
-                <ul>
-                    <li>鬼滅の刃</li>
-                </ul>
-                <p>ゲーム</p>
-                <ul>
-                    <li>英雄伝説軌跡シリーズ</li>
-                    <li>結城友奈は勇者である～花結いのきらめき～</li>
-                    <li>Fate/Grand Order</li>
-                </ul>
-                <h3>ゲームプレイ</h3>
-                <p>スマホゲーム</p>
-                <ul>
-                    <li>アイドリッシュセブン</li>
-                    <li>刀剣乱舞</li>
-                    <li>ダンジョンに出会いを求めるのは間違っているだろうか～メモリア・フレーゼ～</li>
-                    <li>TWISTED-WONDERLAND</li>
-                </ul>
-        </section>
+    <h1>名前</h>
+    <p>香川歩美</p>
+    <h2>経歴</h2>
+        <h3>出身地</h3>
+        <p>富山県滑川市</p>
+        <h3>出身校</h3>
+        <p>富山県立富山北部高等学校</p>
+        <h2>趣味</h2>
+        <h3>読書</h3>
+        <p>ライトノベル/小説</p>
+        <ul>
+            <li>メイデーア転生物語</li>
+            <li>華鬼</li>
+        </ul>
+        <p>漫画</p>
+        <ul>
+            <li>転生悪女の黒歴史</li>
+            <li>桃組＋戦記</li>
+        </ul>
+        <h3>アニメ視聴</h3>
+        <p>国内アニメ</p>
+        <ul>
+            <li>ヴァイオレット・エヴァーガーデン</li>
+            <li>ツルネ</li>
+            <li>キノの旅</li>
+        </ul>
+        <h3>音楽鑑賞</h3>
+        <p>筝曲</p>
+        <ul>
+            <li>龍星群</li>
+            <li>久遠</li>
+            <li>天泣</li>
+        </ul>
+        <h3>Youtube視聴</h3>
+        <p>アニソン</p>
+        <ul>
+            <li>アイドリッシュセブンの曲</li>
+            <li>アイドル</li>
+        </ul>
+        <p>ボカロ</p>
+        <ul>
+            <li>誰かの心臓になれたなら</li>
+            <li>贖罪</li>
+            <li>シャルル</li>
+            <li>命に嫌われている</li>
+            <li>天ノ邪</li>
+        </ul>
+        <p>アニメ</p>
+        <ul>
+            <li>鬼滅の刃</li>
+        </ul>
+        <p>ゲーム</p>
+        <ul>
+            <li>英雄伝説軌跡シリーズ</li>
+            <li>結城友奈は勇者である～花結いのきらめき～</li>
+            <li>Fate/Grand Order</li>
+        </ul>
+        <h3>ゲームプレイ</h3>
+        <p>スマホゲーム</p>
+        <ul>
+            <li>アイドリッシュセブン</li>
+            <li>刀剣乱舞</li>
+            <li>ダンジョンに出会いを求めるのは間違っているだろうか～メモリア・フレーゼ～</li>
+            <li>TWISTED-WONDERLAND</li>
+        </ul>
     </main>
     <footer class="footer">
         <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
