--- a/main/index.html
+++ b/main/index.html
@@ -26,7 +26,7 @@
     <main>
         <h1>MAIN</h1>
         <p>私が気に入っているものの中からライトノベル原作の漫画・アニメ（本を持っているもの）</p>
-        <section>
+        <section class="section">
             <h2>アニメ・ライトノベル・漫画</h2>
             <p>ファンタジー</p>
             <ul>
@@ -178,6 +178,7 @@
             <ul>
                 <li>後宮の烏</li>
             </ul>
+            <p>など</p>
         </section>
     </main>
     <footer class="footer">
