--- a/about/index.html
+++ b/about/index.html
@@ -8,9 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="header">
-        <h1>自己紹介</h1>
-    </header>
+    <header class="header">自己紹介</header>
     <input type="checkbox" name="navToggle" id="navToggle" class="nav-toggle">
     <lavel for="navToggle" class="btn-burger"></lavel>
     <nav id="menubar">
