--- a/light/index.html
+++ b/light/index.html
@@ -86,7 +86,6 @@
             <li>草魔法師クロエの二度目の人生 自由になって子ドラゴンとレベルMAX薬師ライフ</li>
             <li>家から追い出された私は、隣国のお抱え錬金術師として、幸せな第二の人生を送ることにしました!</li>
             <li>魔術師クノンは見えている</li>
-            <li>国渡りの錬金術師</li>
             <li>碧玉の男装香療師は、不思議な癒やし術で宮廷医官になりました。</li>
             <li>泡沫に神は微笑む</li>
         </ul>
@@ -226,6 +225,7 @@
             <li>双子の姉が神子として引き取られて、私は捨てられたけど多分私が神子である。</li>
             <li>今度は絶対に邪魔しませんっ!</li>
             <li>針子の乙女</li>
+            <li>国渡りの錬金術師</li>
             <li>闇堕ち聖女は戦渦で舞う</li>
         </ul>
         <p>Mノベルス</p>
@@ -316,35 +316,34 @@
         </ul>
         <p>マッグガーデン・ノベルズ</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>婚約者に裏切られたので、子爵令嬢から王妃付き侍女にジョブチェンジしてみた</li>
+            <li>元、落ちこぼれ侯爵令嬢です。</li>
+            <li>婚約破棄された『空気』な私、成り上がりの旦那様に嫁ぎました。</li>
         </ul>
         <p>レガロシリーズ</p>
         <ul>
-            <li></li>
-            <li></li>
-        </ul>
-        <p>BF文庫</p>
-        <ul>
-            <li></li>
-            <li></li>
+            <li>華鬼</li>
         </ul>
         <p>ベリーズファンタジー</p>
         <ul>
+            <li>今さら本物の聖女と言われてももう遅い! ~妹にすべてを奪われたので、隣国で自由に行きます~</li>
             <li>規格外スキルの持ち主ですが、聖女になんてなりませんっ! ~チート聖女はちびっこと平穏に暮らしたいので実力をひた隠す~</li>
+            <li>捨てられ聖女サアラは第二の人生を謳歌する~幼女になってしまった私がチートな薬師になるまでb~</li>
             <li>ループ11回目の聖女ですが、隣国でポーション作って幸せになります! ~10回殺され追放されたので、今世は自由気ままな人生を満喫してもいいですよね?~</li>
             <li>妹の身代わりで嫁いだはずが、どうやら私が心の聖女だったようです~自由気ままなスローライフを満喫しているのでほっといてください!~</li>
             <li>我慢ばかりの「お姉様」をやめさせていただきます！~婚約破棄されましたが国を守っていたのは私です。おかげで追放先で村づくりを謳歌しているのでお構いなく~</li>
         </ul>
         <p>GAノベル</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>失格紋の最強賢者 ~世界最強の賢者が更に強くなるために転生しました~</li>
+            <li>嫌われ者の公爵令嬢。</li>
+            <li>聖女の姉ですが、なぜか魅惑の公爵様に仕えることになりました</li>
         </ul>
         <p>HJノベルズ</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>悪役令嬢(ところてん式)</li>
+            <li>ブチ切れ令嬢は報復を誓いました。</li>
+            <li>スライム大公と没落令嬢のあんがい幸せな婚約</li>
         </ul>
         <p>双葉文庫</p>
         <ul>
@@ -408,56 +407,36 @@
         </ul>
         <p>ダッシュエックスノベルズ</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>殿下、ちょっと一言よろしいですか？~無能な悪女だと罵られて婚約破棄されそうですが、その前にあなたの悪事を暴かせていただきますね！~</li>
         </ul>
         <p>フェアリーキスピュア</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>万能女中コニー・ヴィレ</li>
         </ul>
         <p>メディアワークス文庫</p>
         <ul>
-            <li></li>
-            <li></li>
-        </ul>
-        <p>リプレ</p>
-        <ul>
-            <li></li>
-            <li></li>
+            <li>黒狼王と白銀の贄姫 辺境の地で最愛を得る</li>
         </ul>
         <p>宝島社</p>
         <ul>
-            <li></li>
+            <li>真実の愛を見つけたから婚約破棄、ですか。構いませんが、本当にいいんですね?~王太子は眠れない~</li>
             <li></li>
         </ul>
         <p>幻冬舎</p>
         <ul>
-            <li></li>
+            <li>悪役令嬢はオジサマに夢中です</li>
             <li></li>
         </ul>
         <p>早川書房</p>
         <ul>
-            <li></li>
+            <li>転生令嬢と数奇な人生を</li>
             <li></li>
         </ul>
         <p>星海社FICTIONS</p>
         <ul>
-            <li></li>
-            <li></li>
-        </ul>
-        <p>角川書店</p>
-        <ul>
-            <li></li>
-            <li></li>
-        </ul>
-        <p>講談社キャラクターズA</p>
-        <ul>
-            <li></li>
-            <li></li>
+            <li>神さま学校の落ちこぼれ</li>
         </ul>
         <ul>
-            <li>華鬼</li>
             <li>悪役令嬢らしく、攻略対象を服従させます 推しがダメになっていて解釈違いなんですけど!?</li>
             <li>学戦都市アスタリスク</li>
         </ul>
