ライトノベル

--- a/light/index.html
+++ b/light/index.html
@@ -55,6 +55,7 @@
             <li>妹に婚約者を取られたら見知らぬ公爵様に求婚されました</li>
             <li>悪役令嬢なのでラスボスを飼ってみました</li>
             <li>文豪ストレイドッグス</li>
+            <li>悪役令嬢らしく、攻略対象を服従させます 推しがダメになっていて解釈違いなんですけど!?</li>
             <li>やり直し令嬢は皇帝陛下を攻略中</li>
             <li>落ちぶれ才女の幸福 陛下に棄てられたので、最愛の人を救いに行きます</li>
             <li>100年後に転生した私、前世の従騎士に求婚されました 陛下は私が元・王女だとお気づきでないようです</li>
@@ -277,14 +278,6 @@
             <li>隠れ星は心を繋いで ~婚約を解消した後の、美味しいご飯と恋のお話~</li>
             <li>推定年齢120歳、顔も知らない婚約者が実は超絶美形でした。</li>
         </ul>
-        <p>ヒーロー文庫</p>
-        <ul>
-            <li>薬屋のひとりごと</li>
-        </ul>
-        <p>スターツ出版文庫</p>
-        <ul>
-            <li>鬼の花嫁</li>
-        </ul>
         <p>一迅社ノベルズ</p>
         <ul>
             <li>勇者の嫁になりたくて(￣∇￣)ゞ</li>
@@ -294,10 +287,6 @@
             <li>無口な公爵令嬢と冷徹な皇帝~前世拾った子供が皇帝になっていました~</li>
             <li>気弱な令嬢と追放殿下のイチャイチャ領地経営! ~一途で可愛い婚約者を、わたしが一流の領主にして見せます!~</li>
             <li>転生したら悪役令嬢になりました。婚約破棄のイベント、早く来い</li>
-        </ul>
-        <p>アスキー・メディアワークス</p>
-        <ul>
-            <li>結城友奈は勇者である 勇者史外典</li>
         </ul>
         <p>ツギクルブックス</p>
         <ul>
@@ -320,10 +309,6 @@
             <li>元、落ちこぼれ侯爵令嬢です。</li>
             <li>婚約破棄された『空気』な私、成り上がりの旦那様に嫁ぎました。</li>
         </ul>
-        <p>レガロシリーズ</p>
-        <ul>
-            <li>華鬼</li>
-        </ul>
         <p>ベリーズファンタジー</p>
         <ul>
             <li>今さら本物の聖女と言われてももう遅い! ~妹にすべてを奪われたので、隣国で自由に行きます~</li>
@@ -345,100 +330,46 @@
             <li>ブチ切れ令嬢は報復を誓いました。</li>
             <li>スライム大公と没落令嬢のあんがい幸せな婚約</li>
         </ul>
-        <p>双葉文庫</p>
-        <ul>
-            <li></li>
-            <li></li>
-        </ul>
-        <p>集英社オレンジ文庫</p>
-        <ul>
-            <li></li>
-            <li></li>
-        </ul>
         <p>NiyNOVELS</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>断罪されそうな「悪役令嬢」ですが、幼馴染が全てのフラグをへし折っていきました</li>
+            <li>空の乙女と光の王子-呪いをかけられた悪役令嬢は愛を望む-</li>
         </ul>
         <p>サーガフォレスト</p>
         <ul>
-            <li></li>
-            <li></li>
-        </ul>
-        <p>メリッサ文庫</p>
-        <ul>
-            <li></li>
-            <li></li>
-        </ul>
-        <p>角川文庫</p>
-        <ul>
-            <li></li>
-            <li></li>
-        </ul>
-        <p>講談社ラノベ文庫</p>
-        <ul>
-            <li></li>
-            <li></li>
+            <li>やり直し転生令嬢はざまぁしたいのに溺愛される</li>
+            <li>悪役令嬢に転生したはずが、主人公よりも溺愛されてるみたいです</li>
         </ul>
         <p>電撃の新文芸</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>無能才女は悪女になりたい ~義妹の身代わりで嫁いだ令嬢、公爵様の溺愛に気づかない~</li>
+            <li>悪役令嬢の怠惰な溜め息</li>
         </ul>
-        <p>DRE NOVELS</p>
+        <p>ドラゴンノベルス</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>怨獄の薔薇姫 政治の都合で殺されましたが最強のアンデッドとして蘇りました/li>
+            <li>虐げられし令嬢は、世界樹の主になりました ~もふもふな精霊たちに気に入られたみたいです~</li>
         </ul>
-        <p>Jノベルライト文庫</p>
+        <p>その他</p>
         <ul>
-            <li></li>
-            <li></li>
-        </ul>
-        <p>PRIMONOVELS</p>
-        <ul>
-            <li></li>
-            <li></li>
-        </ul>
-        <p>UGfnovels</p>
-        <ul>
-            <li></li>
-            <li></li>
-        </ul>
-        <p>ダッシュエックスノベルズ</p>
-        <ul>
-            <li>殿下、ちょっと一言よろしいですか？~無能な悪女だと罵られて婚約破棄されそうですが、その前にあなたの悪事を暴かせていただきますね！~</li>
-        </ul>
-        <p>フェアリーキスピュア</p>
-        <ul>
-            <li>万能女中コニー・ヴィレ</li>
-        </ul>
-        <p>メディアワークス文庫</p>
-        <ul>
-            <li>黒狼王と白銀の贄姫 辺境の地で最愛を得る</li>
-        </ul>
-        <p>宝島社</p>
-        <ul>
-            <li>真実の愛を見つけたから婚約破棄、ですか。構いませんが、本当にいいんですね?~王太子は眠れない~</li>
-            <li></li>
-        </ul>
-        <p>幻冬舎</p>
-        <ul>
-            <li>悪役令嬢はオジサマに夢中です</li>
-            <li></li>
-        </ul>
-        <p>早川書房</p>
-        <ul>
-            <li>転生令嬢と数奇な人生を</li>
-            <li></li>
-        </ul>
-        <p>星海社FICTIONS</p>
-        <ul>
-            <li>神さま学校の落ちこぼれ</li>
-        </ul>
-        <ul>
-            <li>悪役令嬢らしく、攻略対象を服従させます 推しがダメになっていて解釈違いなんですけど!?</li>
+            <li>薬屋のひとりごと</li>
             <li>学戦都市アスタリスク</li>
+            <li>鬼の花嫁</li>
+            <li>結城友奈は勇者である 勇者史外典</li>
+            <li>華鬼</li>
+            <li>盲目の織姫は後宮で皇帝との恋を紡ぐ</li>
+            <li>後宮の烏</li>
+            <li>結界師の一輪華</li>
+            <li>婚約者が浮気相手と駆け落ちしました。王子殿下に溺愛されて幸せなので、今さら戻りたいと言われても困ります。</li>
+            <li>もう一度会えたなら、いっぱいの笑顔を望まれぬ花嫁は一途に皇太子を愛す</li>
+            <li>転生バッドエンド令嬢は、ヤンデレ王子の溺愛から逃げ出したい</li>
+            <li>殿下、ちょっと一言よろしいですか？~無能な悪女だと罵られて婚約破棄されそうですが、その前にあなたの悪事を暴かせていただきますね！~</li>
+            <li>万能女中コニー・ヴィレ</li>
+            <li>黒狼王と白銀の贄姫 辺境の地で最愛を得る</li>
+            <li>真実の愛を見つけたから婚約破棄、ですか。構いませんが、本当にいいんですね?~王太子は眠れない~</li>
+            <li>悪役令嬢はオジサマに夢中です</li>
+            <li>転生令嬢と数奇な人生を</li>
+            <li>神さま学校の落ちこぼれ</li>
         </ul>
     </main>
     <footer class="footer">
